Fixed IE layout bugs, added font icon support for IE6/7, styled feature navigation on detail pages

--- a/app/assets/stylesheets/detail_pages.css.scss
+++ b/app/assets/stylesheets/detail_pages.css.scss
@@ -68,19 +68,6 @@ section {
   margin-top: 40px;
 }
 
-/* sub-navigation */
-.features-nav-section .heading {
-  margin-top: 42px;
-  text-transform:uppercase;
-}
-
-.features-navigation li {
-  // font-size: 24px;
-  // line-height: 32px;
-  // height: 32px;
-  list-style: none;
-}
-
 .nav-icon {
   font-size: 18px;
   line-height: 18px;
