--- a/app/assets/stylesheets/webstop.css.scss
+++ b/app/assets/stylesheets/webstop.css.scss
@@ -21,8 +21,8 @@ $dark-btn-color: #266f13;
 }
 
 body {
-  padding-top: 76px;
-  padding-bottom: 400px;
+  padding: 76px 0 400px 0;
+  padding: 66px 0 400px 0\9;
 }
 
 .clear {
@@ -150,8 +150,6 @@ a:hover {
   background-image: linear-gradient(to bottom, 
     $light-btn-color, 
     $dark-btn-color);
-  background-repeat: repeat-x;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$light-btn-color', endColorstr='$dark-btn-color', GradientType=0);
   border-color: 
     $dark-btn-color;
 }
@@ -178,10 +176,36 @@ a:hover {
   background-image: linear-gradient(to bottom, 
     darken($light-btn-color, 5%), 
     darken($dark-btn-color, 5%));
-  background-repeat: repeat-x;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='$light-btn-color', endColorstr='$dark-btn-color', GradientType=0);
   border-color: 
     darken($dark-btn-color, 5%);
+}
+
+/* Feature Navigation */
+
+.features-nav-section .heading {
+  margin-top: 42px;
+  text-transform:uppercase;
+}
+
+.features-navigation {
+
+}
+
+.features-navigation li {
+  list-style: none;
+  margin: 10px 0;
+}
+
+.features-navigation a {
+  display: block;
+  background-color: $light-grey;
+  padding: 10px 15px;
+  color: $body-type;
+}
+
+.features-navigation a:hover {
+  background-color: $gray;
+  text-decoration: none;
 }
 
 /* Typography */
@@ -205,219 +229,7 @@ a:hover {
   line-height: 1;
   -webkit-font-smoothing: antialiased;
 }
-.icon-coupons:before {
-  content: "\25";
-}
-.icon-edit:before {
-  content: "\23";
-}
-.icon-photos:before {
-  content: "\21";
-}
-.icon-video:before {
-  content: "\24";
-}
-.icon-new:before {
-  content: "\26";
-}
-.icon-tag:before {
-  content: "\27";
-}
-.icon-cart:before {
-  content: "\28";
-}
-.icon-phone:before {
-  content: "\29";
-}
-.icon-mail:before {
-  content: "\2a";
-}
-.icon-location:before {
-  content: "\2b";
-}
-.icon-user:before {
-  content: "\2d";
-}
-.icon-loading:before {
-  content: "\2e";
-}
-.icon-settings:before {
-  content: "\2f";
-}
-.icon-trash:before {
-  content: "\30";
-}
-.icon-list:before {
-  content: "\31";
-}
-.icon-tree:before {
-  content: "\32";
-}
-.icon-web:before {
-  content: "\33";
-}
-.icon-chains:before {
-  content: "\34";
-}
-.icon-starburst:before {
-  content: "\35";
-}
-.icon-half-star:before {
-  content: "\36";
-}
-.icon-star:before {
-  content: "\37";
-}
-.icon-heart:before {
-  content: "\38";
-}
-.icon-add:before {
-  content: "\39";
-}
-.icon-info:before {
-  content: "\3b";
-}
-.icon-checkmark:before {
-  content: "\3c";
-}
-.icon-delete:before {
-  content: "\3a";
-}
-.icon-google-plus:before {
-  content: "\3d";
-}
-.icon-facebook:before {
-  content: "\3e";
-}
-.icon-instagram:before {
-  content: "\3f";
-}
-.icon-twitter:before {
-  content: "\40";
-}
-.icon-feed:before {
-  content: "\41";
-}
-.icon-youtube:before {
-  content: "\42";
-}
-.icon-vimeo:before {
-  content: "\43";
-}
-.icon-github:before {
-  content: "\45";
-}
-.icon-apple:before {
-  content: "\46";
-}
-.icon-android:before {
-  content: "\47";
-}
-.icon-windows8:before {
-  content: "\48";
-}
-.icon-reddit:before {
-  content: "\49";
-}
-.icon-linkedin:before {
-  content: "\4a";
-}
-.icon-pinterest:before {
-  content: "\4c";
-}
-.icon-delicious:before {
-  content: "\4d";
-}
-.icon-stumbleupon:before {
-  content: "\4e";
-}
-.icon-paypal:before {
-  content: "\50";
-}
-.icon-yelp:before {
-  content: "\51";
-}
-.icon-pdf:before {
-  content: "\52";
-}
-.icon-foursquare:before {
-  content: "\4f";
-}
-.icon-flickr:before {
-  content: "\44";
-}
-.icon-home:before {
-  content: "\22";
-}
-.icon-search:before {
-  content: "\53";
-}
-.icon-cookbook:before {
-  content: "\54";
-}
-.icon-camera:before {
-  content: "\55";
-}
-.icon-barcode:before {
-  content: "\56";
-}
-.icon-healthy:before {
-  content: "\57";
-}
-.icon-power:before {
-  content: "\58";
-}
-.icon-html5:before {
-  content: "\59";
-}
-.icon-css:before {
-  content: "\5a";
-}
-.icon-html:before {
-  content: "\5b";
-}
-.icon-chrome:before {
-  content: "\5c";
-}
-.icon-firefox:before {
-  content: "\5d";
-}
-.icon-IE:before {
-  content: "\5e";
-}
-.icon-opera:before {
-  content: "\5f";
-}
-.icon-safari:before {
-  content: "\60";
-}
-.icon-power-2:before {
-  content: "\4b";
-}
-.icon-interface:before {
-  content: "\61";
-}
-.icon-wholesalers:before {
-  content: "\62";
-}
-.icon-independents:before {
-  content: "\63";
-}
-.icon-social:before {
-  content: "\2c";
-}
-.icon-mobile:before {
-  content: "\64";
-}
-.icon-stats:before {
-  content: "\65";
-}
-.icon-recipe:before {
-  content: "\66";
-}
-.icon-display:before {
-  content: "\67";
-}
+
 
 .icon {
   margin: 3px 10px 0 0;
